<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/layerbg"
    android:padding="10dp">


    <TextView
        android:id="@+id/text_nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_marginStart="200dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="8dp"
        android:text="@string/penjualan_nama"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_tanggal" />

    <TextView
        android:id="@+id/text_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_marginStart="200dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="8dp"
        android:text="@string/penjualan_rt"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_nama" />

    <TextView
        android:id="@+id/text_alamat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/text_status"
        android:layout_marginStart="200dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="8dp"
        android:text="@string/penjualan_alamat"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_status" />

    <TextView
        android:id="@+id/text_jumlah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/text_alamat"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="false"
        android:layout_marginStart="200dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/penjualan_jumlah"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_alamat" />

    <TextView
        android:id="@+id/text_tanggal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/text_jumlah"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/penjualan_tanggal"
        android:textColor="@color/orangebni"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/displaynama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/penjualan_nama"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_tanggal" />

    <TextView
        android:id="@+id/displaystatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/statuspenjualan"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displaynama" />

    <TextView
        android:id="@+id/displayalamat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/penjualan_alamat"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displaystatus" />

    <TextView
        android:id="@+id/displayjumlah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/penjualan_jumlah"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayalamat" />

</androidx.constraintlayout.widget.ConstraintLayout>