<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/layerbg"
    android:padding="10dp">


    <TextView
        android:id="@+id/text_idpangkalan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_marginStart="200dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="8dp"
        android:text="@string/settingagen_idpangkalan"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_namapangkalan" />

    <TextView
        android:id="@+id/text_hargapangkalan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_marginStart="200dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="8dp"
        android:text="@string/settingagen_hargapangkalan"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_idpangkalan" />

    <TextView
        android:id="@+id/text_tglefektif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="200dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="8dp"
        android:text="@string/settingagen_tglefektif"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_hargapangkalan" />

    <TextView
        android:id="@+id/text_nohp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="false"
        android:layout_marginStart="200dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="8dp"
        android:text="@string/settingagen_nohppangkalan"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_tglefektif" />

    <TextView
        android:id="@+id/text_namapangkalan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/settingagen_namapangkalan"
        android:textColor="@color/orangebni"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_emailpangkalan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="false"
        android:layout_marginStart="200dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="8dp"
        android:text="@string/settingagen_emailpangkalan"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_nohp" />

    <TextView
        android:id="@+id/displayidpangkalan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/settingagen_idpangkalan"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_namapangkalan" />

    <TextView
        android:id="@+id/displayhargapangkalan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/settingagen_hargapangkalan"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayidpangkalan" />

    <TextView
        android:id="@+id/displaytglefektif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/settingagen_tglefektif"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayhargapangkalan" />

    <TextView
        android:id="@+id/displaynohp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/settingagen_nohppangkalan"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displaytglefektif" />

    <TextView
        android:id="@+id/displayemailpangkalan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/settingagen_emailpangkalan"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displaynohp" />

</androidx.constraintlayout.widget.ConstraintLayout>